Closed Bug 1766395 Opened 2 years ago Closed 2 years ago

Calendar input form is opened twice

Categories

(GeckoView :: IME, defect)

Firefox 101
Unspecified
All
defect

Tracking

(firefox-esr91 unaffected, firefox99 unaffected, firefox100 unaffected, firefox101+ verified)

VERIFIED FIXED
101 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox99 --- unaffected
firefox100 --- unaffected
firefox101 + verified

People

(Reporter: mcarare, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

101.0.20220425094217 introduced a regression that manifests in opening a modal dialog twice ( a calendar input form in the failing tests for PR that adds the upgrade to this version).

Could be caused by bug 1764157?

Flags: needinfo?(emilio)
Keywords: regression
Regressed by: 1764157

I think it is likely so.

Has Regression Range: --- → yes

Set release status flags based on info from the regressing bug 1764157

To be clear, this is currently blocking Focus AC bumps. Not sure why Fenix tests are managing to still pass, but Focus is permafailing.

Assignee: nobody → emilio
Status: NEW → ASSIGNED

MozShowDateTimePicker should be enough for this. We keep using click for
week / month because those don't implement a widget cross-platform.

Depends on D144800

Flags: needinfo?(emilio)
Keywords: leave-open
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/235c964e238b
Remove dom.forms.datetime-local prefs. r=edgar
Keywords: leave-open
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c704651eb4b7
Don't use click event to show date/time/datetime-local input. r=agi
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch

Verified fixed in today's AC bump. Thanks!

Status: RESOLVED → VERIFIED

Moving some input bugs to the new GeckoView::IME component.

Component: General → IME
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: