Bug 1766395 - Remove dom.forms.datetime-local prefs. r=edgar

We shipped this a while ago.

Differential Revision: https://phabricator.services.mozilla.com/D144800